# langs

my-app/: Dockerfile  Makefile  README.md  pyproject.toml
my-app/app/: db.py  embed.py  graph.py  llms.py  nodes.py  server.py  tools.py  utils.py
my-app/app/data/: 2024-01-10.txt  2024-05-30_cidc598c831.txt  2024-06-19.txt  2024-06-22.txt  sample_text.txt  sample_text_kor.txt
my-app/app/data/embeddings/$2023-08-23_cidc598a120.faiss/: index.pkl
my-app/app/data/embeddings/$2024-01-10_cidc598c830.faiss/: index.faiss  index.pkl
my-app/app/data/embeddings/$2024-05-30_cidc598c831.faiss/: index.faiss  index.pkl
my-app/app/data/embeddings/$2024-06-19_cidc598c832.faiss/: index.faiss  index.pkl
my-app/app/data/embeddings/$2024-06-22_cid2cbca1c1.faiss/: index.faiss  index.pkl
my-app/app/data/embeddings/$sample_text.faiss/: index.faiss  index.pkl
my-app/app/data/embeddings/$sample_text_kor.faiss/: index.faiss  index.pkl
my-app/deploy/: deploy.yaml
